--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "css-loader": "^7.1.1",
+    "eslint": "^8.57.0",
+    "globals": "^15.2.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
+    "typescript-eslint": "^7.9.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "eslint-config-wesbos": "^4.0.1"
   }
 }
